feat: finaliza aside

--- a/index.html
+++ b/index.html
@@ -11,6 +11,20 @@
   <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400..800&family=Leckerli+One&family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
 </head>
 <body>
+  <div id="app" class="grid">
+    <aside>
+      <header id="aside-container" class="flex">
+        <img src="assets/icons/Logo.svg" alt="Ícone de festa">
+        <div id="aside-text" class="flex">
+          <h1>Festivite</h1>
+          <p>Crie um convite digital para o seu evento</p>
+        </div>
+      </header>
+    </aside>
 
+    <main>
+      
+    </main>
+  </div>
 </body>
 </html>
