feat: finaliza seção dados para contato no formulário

--- a/index.html
+++ b/index.html
@@ -349,6 +349,45 @@
             </div>
           </div>
         </fieldset>
+
+        <fieldset id="contact">
+          <div class="field-heading flex">
+            <img src="assets/icons/contact.svg" alt="ícone de contato">
+            <legend>Dados para contato</legend>
+          </div>  
+
+          <div class="input-wrapper">
+            <label for="name">Nome</label>
+            <input 
+            type="text"
+            id="name"
+            name="name"
+            placeholder="Nome completo"
+            required>
+          </div>
+
+          <div class="flex">
+            <div class="input-wrapper flex-1">
+              <label for="email">Email</label>
+              <input 
+              type="email"
+              id="email"
+              name="email"
+              placeholder="exemplo@gmail.com"
+              required>
+            </div>
+
+            <div class="input-wrapper flex-1">
+              <label for="telephone">Fim</label>
+              <input 
+              type="tel"
+              id="telephone"
+              name="telephone"
+              placeholder="(99) 99999-9999"
+              required>
+            </div>
+          </div>
+        </fieldset>
       </form>
     </main>
   </div>
